<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ibnsina.ashajawa.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="@color/background"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentStart="true"
        android:layout_weight="2">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_menu_share"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="1dp"
            android:id="@+id/imageView3" />

        <TextView
            android:text="@string/search_head_str_eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textview_size"
            android:textStyle="bold"
            android:id="@+id/header_txt"
            android:layout_gravity="center" />

    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#99af79"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_weight="4">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textview_size"
            android:layout_marginTop="10dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:hint="@string/select_departure_eng"
            android:id="@+id/location_from" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/textview_size"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:hint="@string/select_arrival_eng"
            android:id="@+id/location_to" />

        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/textview_size"
            android:layout_height="wrap_content"
            android:id="@+id/Jarny_date"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:hint="Select Journey Date"
            android:textAlignment="center"
            android:onClick="datepicker"
            android:background="@color/burlywood"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/textview_size"
            android:id="@+id/return_date"
            android:layout_height="wrap_content"
            android:onClick="datepicker2"
            android:textStyle="bold"
            android:hint="Select Return Date"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:background="@color/burlywood"
            android:layout_marginTop="10dp"/>

        <Button
            android:text="@string/search_btn_str_eng"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:background="#7F9473"
            android:layout_margin="5dp"
            android:textColor="#31373d"
            android:layout_marginTop="10dp"
            android:id="@+id/button" />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:background="#99bf79"
        android:layout_marginRight="20dp"
        android:layout_weight="2">



    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:gravity="center"-->
        <!--android:background="#99cf79"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:layout_weight="2">-->

        <!--<com.google.android.gms.ads.AdView-->
            <!--android:id="@+id/adView"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--ads:adSize="BANNER"-->
            <!--ads:adUnitId="@string/banner_ad_unit_id">-->
        <!--</com.google.android.gms.ads.AdView>-->

    <!--</LinearLayout>-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:id="@+id/call_us"
        android:background="#cbbdc0"
        android:onClick="contuct_link"
        android:text="Contuct Us: 028801969"
        android:textAlignment="center" />



</LinearLayout>
